<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string-array name="search_engine_names">
		<item>BitSnoop</item>
		<item>Extra Torrent</item>
		<item>isoHunt</item>
		<item>Kickass Torrents</item>
		<item>Lime Torrents</item>
		<item>Mininova</item>
		<item>Monova</item>
		<item>The Pirate Bay</item>
		<item>Torrent Downloads</item>
		<item>Torrent Reactor</item>
		<item>Vertor</item>
	</string-array>
   	<string-array name="search_engine_values">
		<item>BitSnoop</item>
		<item>ExtraTorrent</item>
		<item>Isohunt</item>
		<item>KickassTorents</item>
		<item>LimeTorrents</item>
		<item>Mininova</item>
		<item>Monova</item>
		<item>ThePirateBay</item>
		<item>TorrentDownloads</item>
		<item>TorrentReactor</item>
		<item>Vertor</item>
	</string-array>
	<string-array name="download_speed">
		<item>8 kB/s</item>
		<item>16 kB/s</item>
		<item>24 kB/s</item>
		<item>32 kB/s</item>
		<item>48 kB/s</item>
		<item>64 kB/s</item>
		<item>96 kB/s</item>
		<item>128 kB/s</item>
		<item>192 kB/s</item>
		<item>256 kB/s</item>
		<item>384 kB/s</item>
		<item>512 kB/s</item>
		<item>768 kB/s</item>
		<item>1 MB/s</item>
		<item>1.5 MB/s</item>
		<item>2 MB/s</item>
		<item>3 MB/s</item>
		<item>4 MB/s</item>
		<item>Unlimited</item>
	</string-array>
	<string-array name="upload_speed">
		<item>2 kB/s</item>
		<item>4 kB/s</item>
		<item>8 kB/s</item>
		<item>16 kB/s</item>
		<item>24 kB/s</item>
		<item>32 kB/s</item>
		<item>48 kB/s</item>
		<item>64 kB/s</item>
		<item>96 kB/s</item>
		<item>128 kB/s</item>
		<item>192 kB/s</item>
		<item>256 kB/s</item>
		<item>384 kB/s</item>
		<item>512 kB/s</item>
		<item>768 kB/s</item>
		<item>1 MB/s</item>
		<item>1.5 MB/s</item>
		<item>2 MB/s</item>
		<item>Unlimited</item>
	</string-array>
	<string name="unit_b">B</string>
	<string name="unit_kb">kB</string>
	<string name="unit_mb">MB</string>
	<string name="unit_gb">GB</string>
	<string name="unit_tb">TB</string>
	<string name="unit_bps">B/s</string>
	<string name="unit_kbps">kB/s</string>
	<string name="unit_mbps">MB/s</string>
	<string name="unit_gbps">GB/s</string>
	<string name="unit_tbps">TB/s</string>
	<string name="time_msec">\u0020ms\u0020</string>
	<string name="time_sec">\u0020s\u0020</string>
	<string name="time_min">\u0020m\u0020</string>
	<string name="time_hour">\u0020h\u0020</string>
	<string name="time_day">\u0020d\u0020</string>
	<string name="time_year">\u0020y\u0020</string>
	<string name="infinity">∞</string>
	<string name="arrow_up">↑</string>
	<string name="arrow_down">↓</string>
	
    <string name="app_name">DrTorrent</string>
    <string name="menu_addtorrent">Add torrent</string>
    <string name="filebrowser_current">Directory</string>
    <string name="filebrowser_parent">Parent directory</string>
    <string name="filebrowser_folder">Folder</string>
    <string name="downloaded">Downloaded:</string>
    <string name="uploaded">Uploaded:</string>
    <string name="peers">Seeds/peers:</string>
    <string name="download_speed">Download speed:</string>
    <string name="upload_speed">Upload speed:</string>
    <string name="size">Size:</string>
    <string name="elapsed_time">Elapsed time:</string>
    <string name="remaining_time">Remaining time:</string>
    <string name="tab_info">Info</string>
    <string name="tab_peers">Peers</string>
    <string name="tab_pieces">Pieces</string>
    <string name="tab_files">Files</string>
    <string name="tab_trackers">Trackers</string>
    <string name="status_hash_check">Checking hash</string>
    <string name="status_opening">Opening</string>
    <string name="status_started">Started</string>
    <string name="status_wrong_file">Wrong torrent file!</string>
    <string name="status_downloading">Downloading</string>
    <string name="status_seeding">Seeding</string>
    <string name="status_stopped">Stopped</string>
    <string name="preferences_streaming">Streaming mode</string>
    <string name="preferences_streaming_sum">Download content sequentially</string>
    <string name="preferences_port">P2P Port</string>
    <string name="preferences_connections">Connections per torrent</string>
    <string name="all">All</string>
    <string name="priority">"Priority: "</string>
    <string name="priority_normal">normal</string>
    <string name="priority_skip">skip</string>
    <string name="priority_low">low</string>
    <string name="priority_high">high</string>
    <string name="updating">updating</string>
    <string name="working">working</string>
    <string name="failed">failed</string>
    <string name="empty_field"></string>
    <string name="download_folder">Download folder</string>
    <string name="only_wifi">Wi-Fi only</string>
    <string name="only_wifi_sum">Download over Wi-Fi only</string>
    <string name="ready">Ready:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="remove">Remove</string>
    <string name="remove_dialog_title">Are you sure you want to remove this torrent?</string>
    <string name="exit_dialog_title">Are you sure you want to exit?</string>
    <string name="menu_add_tracker">Add tracker</string>
    <string name="tracker_remove_message">Are you sure you want to remove this tracker?</string>
    <string name="menu_add_peer">Add peer</string>
    <string name="ip_address">IP address:</string>
    <string name="port">Port:</string>
    <string name="incoming_connections">Incoming connections</string>
    <string name="enable_incoming_connections">Enable incoming connections</string>
    <string name="upload">Upload</string>
    <string name="enable_upload">Enable upload</string>
    <string name="shut_down">Shut down</string>
    <string name="about">About</string>
    <string name="search">Search torrent</string>
    <string name="about_text">This project was created in cooperation with BME AUT AMORG.</string>
    <string name="developers">Developers:</string>
    <string name="active_developer">Active developer:</string>
    <string name="bori_andras">András Bori</string>
    <string name="ekler_peter">Péter Ekler</string>
    <string name="erdody_nagy_zsombor">Zsombor Erdődy-Nagy</string>
    <string name="about_drtorrent">About DrTorrent</string>
    <string name="settings">Settings</string>
    <string name="download">Download</string>
    <string name="connection">Connection</string>
    <string name="back">Back</string>
	<string name="destination">Destination:</string>
	<string name="drtorrent_is_running">DrTorrent is running…</string>
	<string name="download_complete">Download complete.</string>
	<string name="no_email_client">No e-mail client was found.</string>
	<string name="feedback">Send feedback</string>
	<string name="reading_the_torrent_file">Reading the torrent file…</string>
	<string name="not_a_torrent_file">Not a torrent file!</string>
	<string name="the_torrent_is_already_opened">The torrent is already opened!</string>
	<string name="there_is_not_enough_free_space_on_the_sd_card">There is not enough free space!</string>
	<string name="error">Error!</string>
	<string name="wrong_magnet_link">Wrong magnet link!</string>
	<string name="status_metadata">Downloading metadata</string>
	<string name="add_magnet_link">Add magnet link</string>
	<string name="status_finished">Finished</string>
	<string name="hash">Hash:</string>
	<string name="torrent_already_opened_add_trackers">The torrent is already opened. Do you want to load the trackers from it?</string>
	<string name="inactive">inactive</string>
	<string name="update">Update</string>
	<string name="new_folder">New folder</string>
	<string-array name="torrent_list_views">
		<item>All</item>
		<item>Downloading</item>
		<item>Completed</item>
		<item>Active</item>
		<item>Inactive</item>
	</string-array>
	<string name="rate_app">Rate this app</string>
	<string name="refresh">Refresh</string>
	<string name="details">Details</string>
	<string name="search_engine">Search engine</string>
	<string name="added">Added:</string>
	<string name="no_results">No results</string>
	<string name="clear_history">Clear search history</string>
	<string name="clear_history_message">Are you sure you want to clear the search history?</string>
	<string name="show_results_in_browser">Show results in browser</string>
	<string name="downloading_the_torrent">Downloading the torrent file…</string>
	<string name="delete_downloaded_files">Delete downloaded files</string>
	<string name="upnp">UPnP</string>
	<string name="enable_upnp_port_mapping">Enable UPnP port mapping</string>
	<string name="download_speed_limit">Download limit</string>
    <string name="upload_speed_limit">Upload limit</string>
    <string name="analytics_message">Please help the improvement of DrTorrent and allow sending anonymous usage statistics! (Reports don\'t include any information that could be used to identify the user.)</string>
    <string name="analytics_title">DrTorrent statistics</string>
    <string name="analytics_checkbox">Allow sending anonymous usage statistics</string>
    <string name="statistics">Statistics</string>
    <string name="share">Share</string>
    <string name="share_torrent">Share (torrent)</string>
    <string name="share_magnet">Share (magnet link)</string>
    <string name="create_torrent">Create new torrent</string>
    <string name="private_torrent">Private torrent</string>
    <string name="source">Source</string>
    <string name="filename">Filename</string>
    <string name="save_as">Save as…</string>
    <string name="start_seeding">Start seeding</string>
    <string name="missing_parameters">Missing parameters!</string>
    <string name="status_creating">Creating</string>
</resources>