<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <CheckBoxPreference
        android:key="streaming"
        android:defaultValue="false"
        android:summary="@string/preferences_streaming_sum"
        android:title="@string/preferences_streaming" />
    
    <CheckBoxPreference
        android:key="wifi_only"
        android:defaultValue="true"
        android:summary="@string/only_wifi_sum"
        android:title="@string/only_wifi" />

    <EditTextPreference
        android:key="port"
        android:defaultValue="36400"
        android:inputType="number" 
        android:dialogTitle="@string/preferences_port"
        android:title="@string/preferences_port" />
    
    <EditTextPreference
        android:key="connections"
        android:defaultValue="10"
        android:inputType="number" 
        android:dialogTitle="@string/preferences_connections"
        android:title="@string/preferences_connections" />

    <EditTextPreference
        android:key="download_speed"
        android:defaultValue="0"
        android:inputType="number"
        android:dialogTitle="@string/preferences_download_speed"
        android:title="@string/preferences_download_speed" />
    <EditTextPreference
        android:key="upload_speed"
        android:defaultValue="0"
        android:inputType="number"
        android:dialogTitle="@string/preferences_upload_speed"
        android:title="@string/preferences_upload_speed" />
    
</PreferenceScreen>