<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp"
    android:orientation="vertical" >
    
    <TextView android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/about_text"/>

    <TextView android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/developers" />
    
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:textStyle="italic"
        android:text="@string/bori_andras" />
    
    <TextView android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:textStyle="italic"
        android:text="@string/ekler_peter" />
    
    <TextView android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:textStyle="italic"
        android:text="@string/erdody_nagy_zsombor" />
    
    <TextView android:layout_width="match_parent" 
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:text="@string/active_developer" />
    
    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:textStyle="italic"
        android:text="@string/bori_andras" />
    
</LinearLayout>