<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >
    <RelativeLayout android:id="@+id/torrent_details_tab1"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:paddingLeft="2dp"
				    android:paddingRight="2dp"
				    android:paddingTop="4dp"
				    android:paddingBottom="4dp" >
				    
	    <TextView
	        android:id="@+id/torrent_details_tvName"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="4dp"
	        android:paddingRight="4dp"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="Name of the torrent"
	        android:textStyle="bold"
	        android:singleLine="true" />
	
	    <ProgressBar
	        android:id="@+id/torrent_details_progress"
	        style="?android:attr/progressBarStyleHorizontal"
	        android:progressDrawable="@drawable/progress_blue"
	        android:layout_centerInParent="true"
	        android:indeterminate="false"
	        android:layout_width="fill_parent"
	        android:layout_height="20dp"
	        android:minHeight="20dp"
	        android:maxHeight="20dp"
	        android:layout_margin="2dp"
	        android:layout_below="@id/torrent_details_tvName" />
	    
	    <LinearLayout
	        android:id="@+id/torrent_details_tvProgress"
	        android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:orientation="horizontal"
		    android:layout_alignTop="@id/torrent_details_progress"
		    android:layout_centerInParent="true">
	    
		    <TextView
		        android:id="@+id/torrent_details_tvStatus"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingRight="2dp"
				android:textColor="#FFFFFF"
		        android:text="@string/status_stopped" />
		    
		    <TextView
		        android:id="@+id/torrent_details_tvPercent"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="2dp"
				android:textColor="#FFFFFF"
		        android:text="0%" />
	    </LinearLayout>
	    
	    <TableLayout
	        	android:id="@+id/torrent_details_layoutSpeed"
	        	android:layout_width="fill_parent"
		      	android:layout_height="wrap_content"
		      	android:layout_below="@id/torrent_details_progress"
		      	android:layout_alignParentLeft="true"
		      	android:paddingLeft="2dp"
		      	android:paddingRight="2dp"
   				android:stretchColumns="1">
		    <TableRow>
	            <TextView
				      android:paddingLeft="3dp"
				      android:paddingRight="3dp"
				      android:text="@string/destination" />
	            
	            <TextView android:id="@+id/torrent_details_tvDownloadFolder"
	                  android:layout_weight="1"
				      android:paddingLeft="2dp"
				      android:paddingRight="2dp"
				      android:textStyle="bold"
				      android:singleLine="true"
				      android:text="/mnt/sdcard/download" />
	        </TableRow>
		    <TableRow>
	            <TextView
				      android:paddingLeft="3dp"
				      android:paddingRight="3dp"
				      android:text="@string/size" />
	            
	            <TextView android:id="@+id/torrent_details_tvSize"
	                  android:layout_weight="1"
				      android:paddingLeft="2dp"
				      android:paddingRight="2dp"
				      android:textStyle="bold"
				      android:text="0 B" />
	        </TableRow>
	        <TableRow>
	            <TextView
				      android:paddingLeft="3dp"
				      android:paddingRight="3dp"
				      android:text="@string/ready" />
	            
	            <TextView android:id="@+id/torrent_details_tvReady"
	                  android:layout_weight="1"
				      android:paddingLeft="2dp"
				      android:paddingRight="2dp"
				      android:textStyle="bold"
				      android:text="0 B" />
	        </TableRow>
			<TableRow>
	            <TextView
				      android:paddingLeft="3dp"
				      android:paddingRight="3dp"
				      android:text="@string/elapsed_time" />
	            
	            <TextView android:id="@+id/torrent_details_tvElapsedTime"
	                  android:layout_weight="1"
				      android:paddingLeft="2dp"
				      android:paddingRight="2dp"
				      android:textStyle="bold"
				      android:text="0 s" />
	        </TableRow>
	        <TableRow>    
	            <TextView
				      android:paddingLeft="3dp"
				      android:paddingRight="3dp"
				      android:text="@string/remaining_time" />
	            
	            <TextView android:id="@+id/torrent_details_tvRemainingTime"
	                  android:layout_weight="1"
				      android:paddingLeft="2dp"
				      android:paddingRight="2dp"
				      android:textStyle="bold"
				      android:text="0 s" />
	        </TableRow>
           	<TableRow>
	            <TextView
				      android:paddingLeft="3dp"
				      android:paddingRight="3dp"
				      android:text="@string/downloaded" />
	            
	            <TextView android:id="@+id/torrent_details_tvDownloaded"
	                  android:layout_weight="1"
				      android:paddingLeft="2dp"
				      android:paddingRight="2dp"
				      android:textStyle="bold"
				      android:text="0 B" />
	        </TableRow>
	        <TableRow>
	            <TextView
				      android:paddingLeft="3dp"
				      android:paddingRight="3dp"
				      android:text="@string/uploaded" />
	            
	            <TextView android:id="@+id/torrent_details_tvUploaded"
	                  android:layout_weight="1"
				      android:paddingLeft="2dp"
				      android:paddingRight="2dp"
				      android:textStyle="bold"
				      android:text="0 B" />
	        </TableRow>
	        <TableRow>
	            <TextView
				      android:paddingLeft="3dp"
				      android:paddingRight="3dp"
				      android:text="@string/download_speed" />
	            
	            <TextView android:id="@+id/torrent_details_tvDownloadSpeed"
	                  android:layout_weight="1"
				      android:paddingLeft="2dp"
				      android:paddingRight="2dp"
				      android:textStyle="bold"
				      android:text="0 B/s" />
         	</TableRow>

	        <TableRow>
	            <TextView
				      android:paddingLeft="3dp"
				      android:paddingRight="3dp"
				      android:text="@string/upload_speed" />
	            
	            <TextView android:id="@+id/torrent_details_tvUploadSpeed"
	                  android:layout_weight="1"
				      android:paddingLeft="2dp"
				      android:paddingRight="2dp"
				      android:textStyle="bold"
				      android:text="0 B/s" />
            </TableRow>
	        <TableRow>
	            <TextView
				      android:paddingLeft="3dp"
				      android:paddingRight="3dp"
				      android:text="@string/peers" />
	            
	            <TextView android:id="@+id/torrent_details_tvPeers"
	                  android:layout_weight="1"
				      android:paddingLeft="2dp"
				      android:paddingRight="2dp"
				      android:textStyle="bold"
				      android:text="0/0" />
	        </TableRow>
	        <TableRow>
	            <TextView
				      android:paddingLeft="3dp"
				      android:paddingRight="3dp"
				      android:text="@string/hash" />
	            
	            <TextView android:id="@+id/torrent_details_tvHash"
	                  android:layout_weight="1"
				      android:paddingLeft="2dp"
				      android:paddingRight="2dp"
				      android:textStyle="bold"
				      android:singleLine="true"
				      android:text="0123456789ABCDEF0123456789ABCDEF01234567" />
	        </TableRow>
	    </TableLayout>
	    
	</RelativeLayout>
</ScrollView>