<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:padding="5dp" >

    <TextView
        android:id="@+id/list_item_search_tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="3"
        android:text="Name of the torrent"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />
    
    <TextView
        android:id="@+id/list_item_search_tvAddedLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/added"
        android:textSize="12sp"
        android:paddingRight="4dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/list_item_search_tvName" />
    
    <TextView
        android:id="@+id/list_item_search_tvAdded"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:text="Jan 1, 2000"
        android:textSize="12sp"
        android:paddingRight="4dp"
        android:textStyle="bold"
        android:layout_gravity="left"
        android:layout_toRightOf="@+id/list_item_search_tvAddedLabel"
        android:layout_below="@+id/list_item_search_tvName" />
    
    <TextView
        android:id="@+id/list_item_search_tvSizeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textSize="12sp"
        android:paddingRight="4dp"
        android:layout_gravity="right"
        android:layout_toLeftOf="@+id/list_item_search_tvSize"
        android:layout_below="@+id/list_item_search_tvName" />
    
    <TextView
        android:id="@+id/list_item_search_tvSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="56dp"
        android:maxWidth="96dp"
        android:singleLine="true"
        android:text="0 B"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_gravity="right"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/list_item_search_tvName" />
    
    <TextView
        android:id="@+id/list_item_search_tvPeersLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:text="@string/peers"
        android:textSize="12sp"
        android:paddingRight="4dp"
        android:layout_toLeftOf="@+id/list_item_search_tvPeers"
        android:layout_below="@+id/list_item_search_tvAdded" />
    
    <TextView
        android:id="@+id/list_item_search_tvPeers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="56dp"
        android:maxWidth="128dp"
        android:singleLine="true"
        android:text="0/0"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_gravity="left"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/list_item_search_tvAdded" />

    <ImageView
        android:id="@+id/list_item_search_ivMagnet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/list_item_search_tvAddedLabel"
        android:src="@drawable/ic_magnet_small"
        android:visibility="gone" />
    
</RelativeLayout>